# SE_2

./: 소프트웨어공학_과제2.hwp
2차과제/: README.md
LEE/: SE_2_L.mdj  Use case description 수정.docx
SE3/: SE2_team2.mdj  (+3 more)
SE3/RecruitmentSystem/: CMakeLists.txt  RecruitmentSystem.cpp  input.txt  main.cpp  output.txt
SE3/RecruitmentSystem/ApplicationManagement/: CancelJobApplication.cpp  CancelJobApplication.h  CancelJobApplicationUI.cpp  CancelJobApplicationUI.h  ViewJobApplicationStatistics.cpp  ViewJobApplicationStatistics.h  ViewJobApplicationStatisticsUI.cpp  ViewJobApplicationStatisticsUI.h  ViewJobApplications.cpp  ViewJobApplications.h  ViewJobApplicationsUI.cpp  ViewJobApplicationsUI.h  ViewRecruitmentStatistics.cpp  ViewRecruitmentStatistics.h  ViewRecruitmentStatisticsUI.cpp  ViewRecruitmentStatisticsUI.h
SE3/RecruitmentSystem/Entity/: CMakeLists.txt  CompanyUser.h  GeneralUser.cpp  GeneralUser.h  JobApplication.cpp  JobApplication.h  JobApplicationList.cpp  JobApplicationList.h  Recruitment.cpp  Recruitment.h  RecruitmentList.h  User.h  UserList.cpp  UserList.h
SE3/RecruitmentSystem/JobApplicationManagement/: CMakeLists.txt  CancelJobApplication.cpp  CancelJobApplication.h  CancelJobApplicationUI.cpp  CancelJobApplicationUI.h  ViewJobApplications.cpp  ViewJobApplications.h  ViewJobApplicationsUI.cpp  ViewJobApplicationsUI.h
SE3/RecruitmentSystem/RecruitmentManagement/: ApplyForRecruitment.cpp  ApplyForRecruitment.h  ApplyForRecruitmentUI.cpp  ApplyForRecruitmentUI.h  InquireCompanyRecruitments.cpp  InquireCompanyRecruitments.h  InquireCompanyRecruitmentsUI.cpp  InquireCompanyRecruitmentsUI.h  RegisterRecruitment.cpp  RegisterRecruitment.h  RegisterRecruitmentsUI.cpp  RegisterRecruitmentsUI.h  SearchRecruitments.cpp  SearchRecruitments.h  SearchRecruitmentsUI.cpp  SearchRecruitmentsUI.h
SE3/RecruitmentSystem/UserManagement/: CMakeLists.txt  LogIn.h  LogInUI.h  LogOut.h  LogOutUI.cpp  LogOutUI.h  Login.cpp  LoginUI.cpp  SignUp.cpp  SignUpUI.cpp  Withdrawal.cpp  WithdrawalUI.cpp  WithdrawalUI.h
SE3/RecruitmentSystem/entity/: CompanyUser.cpp  CompanyUser.h  GeneralUser.cpp  GeneralUser.h  JobApplicationList.cpp  JobApplicationList.h  Recruitment.cpp  Recruitment.h  RecruitmentList.cpp  RecruitmentList.h  User.cpp  UserList.cpp  UserList.h
SE3/UserManagement/: CMakeLists.txt  GeneralUser.cpp  GeneralUser.h  LogIn.h  LogInUI.h  LogOut.cpp  LogOut.h  LogOutUI.cpp  LogOutUI.h  Login.cpp  LoginUI.cpp  SE2_team2.mdj  SignUp.cpp  SignUp.h  SignUpUI.cpp  SignUpUI.h  UserList.h  Withdrawal.cpp  Withdrawal.h  WithdrawalUI.cpp  WithdrawalUI.h  main.cpp  test.cpp
SE3/UserManagement/entity/: CompanyUser.cpp  CompanyUser.h  GeneralUser.h  User.cpp  User.h
(+132 files in other folders)
